@@ -1,3 +1,10 @@
+2014-10-15  Sylvain Chouleur  <sylvain.chouleur@gmail.com>
+
+	* gnus-icalendar.el: Support vcal format timezones
+	(gnus-icalendar-event--decode-datefield): use icalendar functions to
+	compute dates with associated timezone
+	(gnus-icalendar-event-from-ical): compute all timezones
+
 2014-10-14  Teodor Zlatanov  <tzz@lifelogs.com>
 
 	* gnus-start.el (gnus-save-newsrc-file-check-timestamp): New option to
